[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/pausescene/pausescreen.gd" type="Script" id=1]
[ext_resource path="res://Assets/Tofuchomp_UI Bar Unselected.png" type="Texture" id=2]
[ext_resource path="res://Assets/Tofuchomp_UI Bar Selected.png" type="Texture" id=3]
[ext_resource path="res://Assets/Tofuchomp_UI Start.png" type="Texture" id=4]
[ext_resource path="res://Assets/Tofuchomp_UI Text Quit.png" type="Texture" id=5]
[ext_resource path="res://Audio/ButtonSound.wav" type="AudioStream" id=6]

[node name="pause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 4.0
margin_right = 12.0
margin_bottom = 4.0
script = ExtResource( 1 )

[node name="background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -21.0
margin_top = -19.0
margin_right = -21.0
margin_bottom = -19.0
rect_scale = Vector2( 1.034, 1.11 )
color = Color( 0.890196, 0.690196, 0.854902, 0.423529 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -781.0
margin_top = -480.0
margin_right = -781.0
margin_bottom = -480.0
rect_scale = Vector2( 2.5, 2.5 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 448.0
margin_top = 166.0
margin_right = 576.0
margin_bottom = 434.0
custom_constants/separation = 12

[node name="Continue" type="TextureButton" parent="CenterContainer/VBoxContainer"]
margin_right = 128.0
margin_bottom = 128.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_focused = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer/Continue"]
margin_left = 2.0
margin_right = 130.0
margin_bottom = 128.0
texture = ExtResource( 4 )

[node name="Exit" type="TextureButton" parent="CenterContainer/VBoxContainer"]
margin_top = 140.0
margin_right = 128.0
margin_bottom = 268.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_focused = ExtResource( 3 )

[node name="TextureRect2" type="TextureRect" parent="CenterContainer/VBoxContainer/Exit"]
margin_left = 2.0
margin_top = 1.0
margin_right = 130.0
margin_bottom = 129.0
texture = ExtResource( 5 )

[node name="Buttonsound" type="AudioStreamPlayer2D" parent="CenterContainer/VBoxContainer"]
position = Vector2( 0, 1.14441e-05 )
scale = Vector2( 1, 1 )
stream = ExtResource( 6 )

[connection signal="focus_exited" from="CenterContainer/VBoxContainer/Continue" to="." method="_on_Continue_focus_exited"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="focus_exited" from="CenterContainer/VBoxContainer/Exit" to="." method="_on_Exit_focus_exited"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
